--- a/apps/duality-social-angular/src/assets/ElectricShocker/stylesheet.css
+++ b/apps/duality-social-angular/src/assets/ElectricShocker/stylesheet.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Electric Shocker';
-    src: url('ElectricShocker.woff2') format('woff2'),
-        url('ElectricShocker.woff') format('woff');
+    src: url('/assets/ElectricShocker.woff2') format('woff2'),
+        url('/assets/ElectricShocker.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
