--- a/apps/duality-social-angular/src/features/auth/login/login.component.html
+++ b/apps/duality-social-angular/src/features/auth/login/login.component.html
@@ -1,6 +1,13 @@
 <div class="container login-container" fxLayout="row" fxLayoutAlign="center center">
     <form [formGroup]="loginForm" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
         <mat-card>
+            <mat-card-title>Log In with Microsoft (MS Live/Outlook)</mat-card-title>
+            <mat-card-content>
+                <button mat-raised-button id="msasLogin" color="primary" [disabled]="loading"
+                    (click)="msasFlowLogin()">Login</button>
+            </mat-card-content>
+        </mat-card>
+        <mat-card>
             <mat-card-title>Duality Social</mat-card-title>
             <mat-card-subtitle>Log in to your account</mat-card-subtitle>
             <mat-card-content>
@@ -36,7 +43,7 @@
 
             <mat-card-actions class="login-actions">
                 <button mat-raised-button id="login" color="primary" [disabled]="loginForm.invalid || loading"
-                    (click)="login()">Login</button>
+                    (click)="emailFlowLogin()">Login</button>
                 <button mat-button id="resetPassword" (click)="resetPassword()" type="button">Reset Password</button>
             </mat-card-actions>
 
