--- a/apps/duality-social-angular/src/shared/layout/layout.component.html
+++ b/apps/duality-social-angular/src/shared/layout/layout.component.html
@@ -33,7 +33,7 @@
       <button id="userNameButton" mat-button [matMenuTriggerFor]="userMenu">
         <i class="fa-solid fa-person"></i>
         <span fxShow fxHide.xs>
-          {{userName}}
+          {{username}}
         </span>
       </button>
       <mat-menu #userMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
