try to post, but getting 10ms timeouts inserting into post viewpoints for unexplained reasons

--- a/apps/duality-social-angular/src/features/about/about-page/about-page.component.html
+++ b/apps/duality-social-angular/src/features/about/about-page/about-page.component.html
@@ -113,15 +113,16 @@
             work developed on private time on private hardware and made for the public good.
           </p>
           <p>
-            Duality Social was born with the monthly Azure play money we get as employees, and you
-            can use the source code of this game to make another one that quickly integrates with
-            Azure. As this work is open source and non-profit, it should not be any conflict of
-            interest.
+            Duality Social was originally born with the monthly Azure play money we get as employees,
+            and then we got a Microsoft grant which provided us ample resources. You can use the
+            source code of this game to make another one that quickly integrates with Azure. As this
+            work is open source and non-profit, it should not be any conflict of interest.
           </p>
           <p>
-            Ultimately, if the site costs more to exist than my monthly Azure credit and the fees
+            Ultimately, if the site costs more to exist than the grant money as well as the fees
             from OpenAI and any other overhead, it will have to be shut down unless donations are made.
-            I need to start up and account with PayPal and/or Stripe on behalf of the organization.
+            A formal donation process hasn't been established, but if you want to donate, please contact
+            Jessica Mulein via email (jessica [at] digitaldefiance [dot] org).
           </p>
           <p>Once the initial invitation period is over, usage will have to be covered by donations,
              like when you go to a museum and you have to pay to get in.
