--- a/apps/duality-social-angular/src/features/auth/login/login.component.html
+++ b/apps/duality-social-angular/src/features/auth/login/login.component.html
@@ -4,7 +4,7 @@
             <mat-card-title>Log In with Microsoft (MS Live/Outlook)</mat-card-title>
             <mat-card-content>
                 <button mat-raised-button id="msasLogin" color="primary" [disabled]="loading"
-                    (click)="msasFlowLogin()">Login</button>
+                    (click)="false">Login</button>
             </mat-card-content>
         </mat-card>
         <mat-card>
