--- a/apps/duality-social-angular/src/shared/layout/layout.component.html
+++ b/apps/duality-social-angular/src/shared/layout/layout.component.html
@@ -55,7 +55,7 @@
         <i class="fa-solid fa-person"></i>person
       </button>
       <mat-menu #loginMenu="matMenu" xPosition="before" yPosition="above" [overlapTrigger]="false">
-        <a mat-menu-item (click)="loginRedirect()">
+        <a mat-menu-item (click)="false">
           <i class="fa-solid fa-person-sign"></i>
           <span>Log in</span>
         </a>
