get rid of sessions

--- a/apps/duality-social-angular/src/shared/widgets/fontAwesomePlayground/playground.component.html
+++ b/apps/duality-social-angular/src/shared/widgets/fontAwesomePlayground/playground.component.html
@@ -30,6 +30,7 @@
                                     style="..style.."&gt;&lt;/i&gt;</li>
                             </ol>
                         </li>
+                        <li>Example: {{duotone building color:blue}} -&gt; <i class="fa-duotone fa-building" style="color: blue;"></i></li>
                     </ul>
                 </div>
             </mat-card-content>
